Fix script tag closing in newmaris.html

--- a/newmaris.html
+++ b/newmaris.html
@@ -782,6 +782,6 @@
         currentStudioIndex = (currentStudioIndex + 1) % studioImages.length;
         updateStudioCarouselImage();
     }
-</script>t>
+</script>
 </body>
 </html></html>
