--- a/video.html
+++ b/video.html
@@ -1,4 +1,4 @@
-bitch, i hate coding.
+<!-- Bitch, I hate coding -->
 --------------------------------------------
 <!DOCTYPE html>
 <html lang="en">
