--- a/currently.html
+++ b/currently.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Every Day I See My Dream</title>
 
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="./style.css">
   <style>
     /* Import DepartureMono font */
     @font-face {
@@ -344,15 +345,7 @@
       margin: 0 10px;
     }
 
-    /* Footer */
-    .footer {
-      background-color: var(--pink-3);
-      color: #fff;
-      text-align: center;
-      padding: 12px;
-      font-weight: bold;
-      margin-top: auto;
-    }
+    /* Footer styling moved to centralized style.css */
 
     /* Responsive */
     @media (max-width: 1024px) {
