--- a/index.html
+++ b/index.html
@@ -208,6 +208,11 @@
                 Click to learn about me
             </a>
         </div>
+        <div class="cute-box">
+            <a href="https://damaris-guzman.github.io/portfolio/publications.html" class="gradient-button">
+                Publications
+            </a>
+        </div>
     </div>
 
     <div class="grid-container">
