--- a/publications.html
+++ b/publications.html
@@ -63,13 +63,7 @@
         <div class="publication-item">
             <h3>From Here to Anywhere - Art Resources ★~(◠‿◕✿)</h3>
             <div class="zine-embed">
-                <iframe 
-                    src="https://www.zine.baby/From-Here-to-Anywhere-Art-Resources" 
-                    width="100%" 
-                    height="600" 
-                    frameborder="0" 
-                    allowfullscreen>
-                </iframe>
+                <img src="zine-img.png" alt="From Here to Anywhere - Art Resources Zine" width="100%">
             </div>
             <p>My zine featuring art resources and creative guidance. <a href="https://www.zine.baby/From-Here-to-Anywhere-Art-Resources" target="_blank">View on zine.baby</a></p>
         </div>
