Update print statement from 'Hello' to 'Goodbye'

--- a/currently.html
+++ b/currently.html
@@ -429,10 +429,12 @@
           <ul style="list-style-type:none; padding-left:0; margin:0;">
             <li>★ Meditative AE simulations</li>
             <li>★ Performed live through a MAX/MSP system with a MIDI controller</li>
-            <li>★ Fully edited 33-second video / Multi-screen
+            <li>★ Multi-screen / 3D animated video
+            <li>★ 3D Printed + Metal Casted Locket</li>
+            <li>★ AI modded Furby (1st gen, 1989 edition).
               <ul style="list-style-type:none; padding-left:20px; margin:8px 0 0;">
-                <li>➜ Equipped with VFX, 3D animation, and immersive film techniques.</li>
-                          <li>★ 3D Printed + Metal Casted Locket</li>
+                <li>➜ Reacts to audience presence. Rude, threatening demeanor.</li>
+              </ul>
               </ul>
             </li>
           </ul>
@@ -637,13 +639,13 @@
 
   </div>
 
-  <!-- Image preview overlay -->
+  <!-- Image preview overlay (shared) -->
   <div id="image-preview-overlay">
     <img id="image-preview-img" src="" alt="Preview">
     <button class="close-btn" aria-label="Close preview">×</button>
   </div>
 
-  <!-- yuh -->
+  <!-- Footer -->
   <div class="footer">
     <p>© 2025 DAMARIS GUZMAN @GRILL0101</p>
   </div>
@@ -717,7 +719,7 @@
       // Initialize storyboard image in case user lands on full-video first
       updateGalleryViewerImage();
 
-      // preview for gallery images
+      // Image lightbox preview for gallery images
       const overlay = document.getElementById('image-preview-overlay');
       const overlayImg = document.getElementById('image-preview-img');
       const closeBtn = overlay.querySelector('.close-btn');
