--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -183,19 +184,39 @@
             }
         }
 
+        .construction-notice {
+            background-color: #ff8fb2;
+            color: white;
+            text-align: center;
+            padding: 8px 20px;
+            font-size: 14px;
+            text-transform: uppercase;
+            font-weight: bold;
+            letter-spacing: 1px;
+            width: 100%;
+        }
+
+        .construction-notice p {
+            margin: 0;
+        }
+
     </style>
 </head>
 <body>
 
 <div class="header">
     <h1>
-        <a href="/about">
+        <a href="/cv">
             <span>D</span><span>a</span><span>m</span><span>a</span><span>r</span><span>i</span><span>s</span>
             <span> </span>
             <span>G</span><span>U</span><span>Z</span><span>M</span><span>A</span><span>N</span>
             <span class="wave-icon">★~(◠‿◕✿)</span>
         </a>
     </h1>
+</div>
+
+<div class="construction-notice">
+    <p>This site is under construction</p>
 </div>
 
 <div class="main-content">
